--- a/setup.cfg
+++ b/setup.cfg
@@ -2,15 +2,14 @@
 name = django-inspire
 version = 0.0.1
 description = Inspiring Django Command.
-long_description = file: README.md
 url = https://sawirstudio.com/
 author = Ricardo Sawir
 author_email = sawir.ricardo@gmail.com
-license = BSD-3-Clause  # Example license
+license_files = LICENSE.md
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
+    Framework :: Django :: 1.4  # Replace "X.Y" as appropriate
     Intended Audience :: Developers
     License :: MIT License
     Operating System :: OS Independent
@@ -28,3 +27,6 @@ packages = find:
 python_requires = >=2.7
 install_requires =
     Django >= 1.4  # Replace "X.Y" as appropriate
+
+[flake8]
+ignore = E501,W503,W504
