--- a/setup.cfg
+++ b/setup.cfg
@@ -6,20 +6,11 @@ url = https://sawirstudio.com/
 author = Ricardo Sawir
 author_email = sawir.ricardo@gmail.com
 license_files = LICENSE.md
-classifiers =
-    Environment :: Web Environment
-    Framework :: Django
-    Framework :: Django :: 1.4  # Replace "X.Y" as appropriate
-    Intended Audience :: Developers
-    License :: MIT License
-    Operating System :: OS Independent
-    Programming Language :: Python
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Topic :: Internet :: WWW/HTTP
-    Topic :: Internet :: WWW/HTTP :: Dynamic Content
+classifiers = [
+	"License :: OSI Approved :: MIT License",
+	"Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+]
 
 [options]
 include_package_data = true
