--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,11 @@
 [metadata]
 name = django-inspire
-version = 0.0.1
+version = 0.0.3
 description = Inspiring Django Command.
-url = https://sawirstudio.com/
+url = https://github.com/sawirricardo/django-inspire
 author = Ricardo Sawir
 author_email = sawir.ricardo@gmail.com
 license_files = LICENSE.md
-classifiers = [
-	"License :: OSI Approved :: MIT License",
-	"Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-]
 
 [options]
 include_package_data = true
